Fixed alignment on firefox

--- a/assets/minigrid.css
+++ b/assets/minigrid.css
@@ -1,7 +1,6 @@
 .minigrid-container {
     width: 100%;
     height: auto;
-    display: ruby-text;
 }
 .minigrid-container .grid {
     width: 200px;
