--- a/assets/roexec.css
+++ b/assets/roexec.css
@@ -1,21 +1,20 @@
 .grid-container {
     margin-top: 10px;
     margin-bottom: 100px;
-    display: ruby-text;
   }
   .grid {
     display: inline-grid;
     background-color: rgba(255, 255, 255, .01);
     border: var(--border-outline);
     backdrop-filter: blur(2px);
-    width: 350px;
+    width: 385px;
     height: 400px;
     border-radius: 20px;
     border-bottom: #000 30px inset;
     padding: 10px;
     padding-bottom: 20px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin-right: 15px;
+    margin-bottom: 15px;
     min-height: 325px;
   }
   .grid .title {
